<resources>
    <string name="app_name">Calculadora</string>
    <string name="result_number">0</string>
    <string name="ac">AC</string>
    <string name="parentheses">( )</string>
    <string name="percentage">%</string>
    <string name="split">÷</string>
    <string name="backspace">borrar</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="borrar">Borrar</string>
    <string name="hint">0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiplication">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="number_zero">0</string>
    <string name="number_field">Campo</string>
    <string name="square_root">√</string>
    <string name="pi_button">π</string>
    <string name="caret_button">^</string>
    <string name="factorial_button">!</string>
</resources>